# chat-server

./: LICENSE  pyproject.toml
app/: __main__.py  middleware.py  shared.py  validacao.py
